--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Awesome Blog</title>
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!--Header-->
@@ -13,10 +15,13 @@
         <a href="/index.html" class="nav-brand text-dark"> Blog </a>
 
         <!--collapse on toggle button click-->
-        <div class="collapse">
-          <ul class="navbar-nav">
-            <a href="#" class="nav-link">Home</a>
-          </ul>
+        <div class="navbar-nav">
+          <a href="#" class="nav-link">Home</a>
+          <a href="#" class="nav-link">Blog</a>
+          <a href="#" class="nav-link">Pages</a>
+          <a href="#" class="nav-link">Categories</a>
+          <a href="#" class="nav-link">About</a>
+          <a href="#" class="nav-link">Contact</a>
         </div>
       </nav>
     </header>
