more styling added for nav

--- a/assets/index.html
+++ b/assets/index.html
@@ -15,13 +15,15 @@
         <a href="/index.html" class="nav-brand text-dark"> Blog </a>
 
         <!--collapse on toggle button click-->
-        <div class="navbar-nav">
-          <a href="#" class="nav-link">Home</a>
-          <a href="#" class="nav-link">Blog</a>
-          <a href="#" class="nav-link">Pages</a>
-          <a href="#" class="nav-link">Categories</a>
-          <a href="#" class="nav-link">About</a>
-          <a href="#" class="nav-link">Contact</a>
+        <div class="collapse">
+          <div class="navbar-nav">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">Blog</a>
+            <a href="#" class="nav-link">Pages</a>
+            <a href="#" class="nav-link">Categories</a>
+            <a href="#" class="nav-link">About</a>
+            <a href="#" class="nav-link">Contact</a>
+          </div>
         </div>
       </nav>
     </header>
