Added fontawesome kit and styling for toggle button

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,12 +7,21 @@
     <title>My Awesome Blog</title>
 
     <link rel="stylesheet" href="/style.css" />
+    <script
+      src="https://kit.fontawesome.com/6b4bd3e8e8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!--Header-->
     <header id="header" class="shadow bg-light">
       <nav class="container navbar">
         <a href="/index.html" class="nav-brand text-dark"> Blog </a>
+
+        <!--toggle button-->
+        <button class="toggle-button">
+          <i class="fa-solid fa-bars"></i>
+        </button>
 
         <!--collapse on toggle button click-->
         <div class="collapse">
