Search bar and styling added

--- a/assets/index.html
+++ b/assets/index.html
@@ -23,6 +23,14 @@
           <i class="fa-solid fa-bars"></i>
         </button>
 
+        <!--search button-->
+        <form class="search-button">
+          <input type="text" placeholder="Search.." name="search" />
+          <button type="submit">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </button>
+        </form>
+
         <!--collapse on toggle button click-->
         <div class="collapse">
           <div class="navbar-nav">
