added styling for navbar to collapse and event listener for navbar

--- a/assets/index.html
+++ b/assets/index.html
@@ -45,5 +45,8 @@
       </nav>
     </header>
     <!--Header-->
+
+    <!--javascript file-->
+    <script src="index.js"></script>
   </body>
 </html>
