added main section and image folder

--- a/assets/index.html
+++ b/assets/index.html
@@ -46,6 +46,49 @@
     </header>
     <!--Header-->
 
+    <!--Main Site-->
+    <main id="site-main">
+      <section id="posts">
+        <div class="container">
+          <div class="grid">
+            <!--article portion-->
+            <div class="grid-item">
+              <article class="article">
+                <div class="card">
+                  <div class="overflow-img">
+                    <a>
+                      <img
+                        src="/assets/images/pexels-element-digital-1293261.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="card-body text-center px-1">
+                    <a href="#" class="text-title display-1 text-dark">
+                      Feedback
+                    </a>
+                    <p class="secondary-title text-secondary display-3">
+                      <span
+                        ><i class="far fa-clock text-primary"></i>Clock Wed 02,
+                        2022</span
+                      >
+                      <span
+                        ><i class="far fa-comments text-primary"></i>12</span
+                      >
+                    </p>
+                  </div>
+                </div>
+              </article>
+            </div>
+            <!--article portion-->
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!--Main Site-->
+
     <!--javascript file-->
     <script src="index.js"></script>
   </body>
