images added, masonry library added to create horizontal grid

--- a/assets/index.html
+++ b/assets/index.html
@@ -48,6 +48,7 @@
 
     <!--Main Site-->
     <main id="site-main">
+      <!--Blog Post-->
       <section id="posts">
         <div class="container">
           <div class="grid">
@@ -58,7 +59,7 @@
                   <div class="overflow-img">
                     <a>
                       <img
-                        src="/assets/images/pexels-element-digital-1293261.jpg"
+                        src="/assets/images/img1.jpg"
                         class="img-fluid"
                         alt=""
                       />
@@ -70,12 +71,70 @@
                     </a>
                     <p class="secondary-title text-secondary display-3">
                       <span
-                        ><i class="far fa-clock text-primary"></i>Clock Wed 02,
-                        2022</span
-                      >
+                        ><i class="far fa-clock text-primary"></i> Clock Wed 02,
+                        2022
+                      </span>
                       <span
-                        ><i class="far fa-comments text-primary"></i>12</span
-                      >
+                        ><i class="far fa-comments text-primary"></i> 12
+                      </span>
+                    </p>
+                  </div>
+                </div>
+              </article>
+            </div>
+            <div class="grid-item">
+              <article class="article">
+                <div class="card">
+                  <div class="overflow-img">
+                    <a>
+                      <img
+                        src="/assets/images/img2.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="card-body text-center px-1">
+                    <a href="#" class="text-title display-1 text-dark">
+                      Feedback
+                    </a>
+                    <p class="secondary-title text-secondary display-3">
+                      <span
+                        ><i class="far fa-clock text-primary"></i> Clock Wed 02,
+                        2022
+                      </span>
+                      <span
+                        ><i class="far fa-comments text-primary"></i> 12
+                      </span>
+                    </p>
+                  </div>
+                </div>
+              </article>
+            </div>
+            <div class="grid-item">
+              <article class="article">
+                <div class="card">
+                  <div class="overflow-img">
+                    <a>
+                      <img
+                        src="/assets/images/img3.jpg"
+                        class="img-fluid"
+                        alt=""
+                      />
+                    </a>
+                  </div>
+                  <div class="card-body text-center px-1">
+                    <a href="#" class="text-title display-1 text-dark">
+                      Feedback
+                    </a>
+                    <p class="secondary-title text-secondary display-3">
+                      <span
+                        ><i class="far fa-clock text-primary"></i> Clock Wed 02,
+                        2022
+                      </span>
+                      <span
+                        ><i class="far fa-comments text-primary"></i> 12
+                      </span>
                     </p>
                   </div>
                 </div>
@@ -88,6 +147,14 @@
     </main>
 
     <!--Main Site-->
+
+    <!--Masonary library-->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"
+      integrity="sha512-JRlcvSZAXT8+5SQQAvklXGJuxXTouyq8oIMaYERZQasB8SBDHZaUbeASsJWpk0UUrf89DP3/aefPPrlMR1h1yQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
     <!--javascript file-->
     <script src="index.js"></script>
