swiper cdn added for a slider

--- a/assets/index.html
+++ b/assets/index.html
@@ -7,10 +7,20 @@
     <title>My Awesome Blog</title>
 
     <link rel="stylesheet" href="/style.css" />
+    <!--font awesome icon-->
     <script
       src="https://kit.fontawesome.com/6b4bd3e8e8.js"
       crossorigin="anonymous"
     ></script>
+
+    <!--swiper css-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.css"
+      integrity="sha512-jxGmKjC/OykrTklkNK2NgnhNtKtUAADFY+rvSi3nA7dbaPRfjrSXYxHqX8iq5N6WTOntqEQZrEwW3L84sirfKQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!--Header-->
@@ -144,6 +154,37 @@
           </div>
         </div>
       </section>
+      <div class="text-center">
+        <button class="btn btn-primary secondary-title text-light">
+          Load More Posts...
+        </button>
+      </div>
+      <!--Slider-->
+      <section class="slider">
+        <div class="container">
+          <!-- Slider main container -->
+          <div class="swiper">
+            <!-- Additional required wrapper -->
+            <div class="swiper-wrapper">
+              <!-- Slides -->
+              <div class="swiper-slide">Slide 1</div>
+              <div class="swiper-slide">Slide 2</div>
+              <div class="swiper-slide">Slide 3</div>
+              ...
+            </div>
+            <!-- If we need pagination -->
+            <div class="swiper-pagination"></div>
+
+            <!-- If we need navigation buttons -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+
+            <!-- If we need scrollbar -->
+            <div class="swiper-scrollbar"></div>
+          </div>
+        </div>
+      </section>
+      <!--Slider-->
     </main>
 
     <!--Main Site-->
@@ -152,6 +193,14 @@
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"
       integrity="sha512-JRlcvSZAXT8+5SQQAvklXGJuxXTouyq8oIMaYERZQasB8SBDHZaUbeASsJWpk0UUrf89DP3/aefPPrlMR1h1yQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
+    <!--Swiper cdn-->
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.5/swiper-bundle.min.js"
+      integrity="sha512-wdUM0BxMyMC/Yem1RWDiIiXA6ssXMoxypihVEwxDc+ftznGeRu4s9Fmxl8PthpxOh5CQ0eqjqw1Q8ScgNA1moQ=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
