--- a/assets/index.html
+++ b/assets/index.html
@@ -163,24 +163,27 @@
       <section class="slider">
         <div class="container">
           <!-- Slider main container -->
-          <div class="swiper">
+          <div class="swiper-container">
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide">Slide 1</div>
-              <div class="swiper-slide">Slide 2</div>
-              <div class="swiper-slide">Slide 3</div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="/assets/images/img1.jpg" class="img-fluid" />
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="/assets/images/img2.jpg" class="img-fluid" />
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="/assets/images/img3.jpg" class="img-fluid" />
+                </a>
+              </div>
               ...
             </div>
-            <!-- If we need pagination -->
-            <div class="swiper-pagination"></div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
-
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
           </div>
         </div>
       </section>
