contact us footer added

--- a/assets/index.html
+++ b/assets/index.html
@@ -192,6 +192,37 @@
 
     <!--Main Site-->
 
+    <!--Footer-->
+    <footer id="footer">
+      <div class="container">
+        <div class="row mb-3">
+          <div class="col3">
+            <h2 class="footer-title secondary-title">About Us</h2>
+            <div class="secondary-title text-secondary">
+              <p class="mt-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Excepturi illo quasi fuga nulla optio odio voluptates tempore,
+                modi perspiciatis officia minus blanditiis velit facere
+                distinctio, sint voluptate quam est quas.
+              </p>
+              <address>
+                <i class="fas fa-map-marker-alt">123 Global Palace</i>
+              </address>
+              <div class="phone">
+                <i class="fas fa-mobile text-primary">111-222-3344</i>
+              </div>
+              <div class="email">
+                <i class="fas fa-envelope text-primary">email@email.com</i>
+              </div>
+            </div>
+          </div>
+          <div class="col3"></div>
+          <div class="col3"></div>
+        </div>
+      </div>
+    </footer>
+    <!--Footer-->
+
     <!--Masonary library-->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"
@@ -199,6 +230,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <!--Masonary library-->
 
     <!--Swiper cdn-->
     <script
@@ -207,8 +239,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     ></script>
+    <!--Swiper cdn-->
 
     <!--javascript file-->
     <script src="index.js"></script>
+    <!--javascript file-->
   </body>
 </html>
