--- a/assets/index.html
+++ b/assets/index.html
@@ -196,7 +196,7 @@
     <footer id="footer">
       <div class="container">
         <div class="row mb-3">
-          <div class="col3">
+          <div class="col-3">
             <h2 class="footer-title secondary-title">About Us</h2>
             <div class="secondary-title text-secondary">
               <p class="mt-2">
@@ -216,8 +216,8 @@
               </div>
             </div>
           </div>
-          <div class="col3"></div>
-          <div class="col3"></div>
+          <div class="col-3">Column 2</div>
+          <div class="col-3">Column 3</div>
         </div>
       </div>
     </footer>
