--- a/assets/index.html
+++ b/assets/index.html
@@ -216,7 +216,33 @@
               </div>
             </div>
           </div>
-          <div class="col-3">Column 2</div>
+          <div class="col-3">
+            <h2 class="footer-title secondary-title">Featured Items</h2>
+            <div class="featured-items">
+              <div class="flex-item">
+                <article>
+                  <div class="d-flex">
+                    <a href="#">
+                      <img
+                        src="./images/img1.jpg"
+                        class="object-fit px-1"
+                        alt=""
+                      />
+                    </a>
+                    <div class="px-1">
+                      <p class="text-title display-2 text-dark">Item 1</p>
+                      <p class="secondary-title text-secondary display-3">
+                        <span
+                          ><i class="far fa-clock text-primary"></i> Wed 02,
+                          2022</span
+                        >
+                      </p>
+                    </div>
+                  </div>
+                </article>
+              </div>
+            </div>
+          </div>
           <div class="col-3">Column 3</div>
         </div>
       </div>
