padding and second item added

--- a/assets/index.html
+++ b/assets/index.html
@@ -216,6 +216,8 @@
               </div>
             </div>
           </div>
+          <!--Contact form-->
+          <!--Featured item-->
           <div class="col-3">
             <h2 class="footer-title secondary-title">Featured Items</h2>
             <div class="featured-items">
@@ -241,10 +243,33 @@
                   </div>
                 </article>
               </div>
+              <div class="featured-items">
+                <div class="flex-item">
+                  <article>
+                    <div class="d-flex">
+                      <a href="#">
+                        <img
+                          src="./images/img2.jpg"
+                          class="object-fit px-1"
+                          alt=""
+                        />
+                      </a>
+                      <div class="px-1">
+                        <p class="text-title display-2 text-dark">Item 2</p>
+                        <p class="secondary-title text-secondary display-3">
+                          <span
+                            ><i class="far fa-clock text-primary"></i> Wed 02,
+                            2022</span
+                          >
+                        </p>
+                      </div>
+                    </div>
+                  </article>
+                </div>
             </div>
-          </div>
-          <div class="col-3">Column 3</div>
+          </div>  
         </div>
+        <div class="col-3">Column 3</div>
       </div>
     </footer>
     <!--Footer-->
