--- a/assets/index.html
+++ b/assets/index.html
@@ -269,7 +269,33 @@
             </div>
           </div>  
         </div>
-        <div class="col-3">Column 3</div>
+        <div class="col-3">
+            <h2 class="footer-title secondary-title">Tags</h2>
+
+            <div class="tags">
+                <div class="d-flex flex-wrap">
+                    <a href="#" class="nav-link btn bg-;ight">Travel</a>
+                    <a href="#" class="nav-link btn bg-;ight">Food</a>
+                    <a href="#" class="nav-link btn bg-;ight">Lifestyle</a>
+                    <a href="#" class="nav-link btn bg-;ight">Technology</a>
+                    <a href="#" class="nav-link btn bg-;ight">Fashion</a>
+                    <a href="#" class="nav-link btn bg-;ight">Games</a>
+                </div>
+
+                <h2 class="foot-title secondary-title mt-2">Social</h2>
+                <div class="tags social">
+                    <div class="d-flex flex-wrap">
+                        <a href="#" class="nav-link btn bg-light"><i class="fa-brands fa-square-facebook"></i></a>
+                    </div>
+                    <div class="d-flex flex-wrap">
+                        <a href="#" class="nav-link btn bg-light"><i class="fa-brands fa-square-instagram"></i></a>
+                    </div>
+                    <div class="d-flex flex-wrap">
+                        <a href="#" class="nav-link btn bg-light"><i class="fa-brands fa-square-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
       </div>
     </footer>
     <!--Footer-->
