images added and styling for the social icons

--- a/assets/index.html
+++ b/assets/index.html
@@ -182,7 +182,21 @@
                   <img src="/assets/images/img3.jpg" class="img-fluid" />
                 </a>
               </div>
-              ...
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="/assets/images/img4.jpg" class="img-fluid" />
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="/assets/images/img5.jpg" class="img-fluid" />
+                </a>
+              </div>
+              <div class="swiper-slide">
+                <a href="#">
+                  <img src="/assets/images/img6.jpg" class="img-fluid" />
+                </a>
+              </div>
             </div>
           </div>
         </div>
