--- a/assets/index.html
+++ b/assets/index.html
@@ -77,7 +77,7 @@
                   </div>
                   <div class="card-body text-center px-1">
                     <a href="#" class="text-title display-1 text-dark">
-                      Feedback
+                      Hobby 1
                     </a>
                     <p class="secondary-title text-secondary display-3">
                       <span
@@ -106,7 +106,7 @@
                   </div>
                   <div class="card-body text-center px-1">
                     <a href="#" class="text-title display-1 text-dark">
-                      Feedback
+                      Hobby 2
                     </a>
                     <p class="secondary-title text-secondary display-3">
                       <span
@@ -135,7 +135,7 @@
                   </div>
                   <div class="card-body text-center px-1">
                     <a href="#" class="text-title display-1 text-dark">
-                      Feedback
+                      Hobby 3
                     </a>
                     <p class="secondary-title text-secondary display-3">
                       <span
@@ -310,6 +310,10 @@
                 </div>
             </div>
         </div>
+      </div>
+      <!--Copyrights-->
+      <div class="copyrights">
+        <p class="text-center text-secondary display-2">© 2022 Copyright all rights reserved</p>
       </div>
     </footer>
     <!--Footer-->
